--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,6 +12,7 @@
 @import '_variables';
 @import 'nav';
 @import 'header';
+@import 'indexmedia';
 
 
 // Common styles
@@ -27,6 +28,6 @@ ul {
 }
 
 .container {
-    max-width: 1024px;
+    max-width: 1200px;
     margin: 0 auto;
 }
