--- a/src/scss/indexmedia.scss
+++ b/src/scss/indexmedia.scss
@@ -1,13 +1,22 @@
 .section-media {
     min-height: 600px;
     background-size: cover;
+
+    &:nth-child(even) {
+        background: red;
+
+        .media__content {
+            left: auto;
+            right: 0;
+        }
+    }
 }
 
 .media {
     position: relative;
-    width: 600px;
     
     &__content {
+        width: 500px;
         position: absolute;
         top: 2rem;
         left: 0;
