--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,12 +8,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=VT323&display=swap');
 @include font('Tablon', '../fonts/Tablon-Medium');
 
-// Import partials
+// Import components
 @import '_variables';
 @import 'nav';
+@import 'footer';
+
+// Import pages
 @import 'header';
 @import 'indexmedia';
-@import 'footer';
+@import 'news';
 
 
 // Common styles
