--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -74,6 +74,7 @@
 
             &__category {
                 margin-bottom: 1rem;
+                font-family: 'Tablon';
 
                 h2 {
                     margin: 0;
