--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -57,7 +57,7 @@
             z-index: 10;
             top: 26px;
             background: white;
-            min-width: 300px;
+            min-width: 400px;
             display: none;
             box-shadow: $drop-shadow;
 
@@ -82,6 +82,7 @@
                     padding: 1rem;
                     background: $dark-color;
                     color: white;
+                    text-transform: uppercase;
                 }
 
                 li {
@@ -90,6 +91,7 @@
             
                 a {
                     padding: 1rem;
+                    padding-left: 2rem;
                     color: black !important;
                     text-decoration: none;
                 }
