--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -36,3 +36,22 @@ ul {
     max-width: 1200px;
     margin: 0 auto;
 }
+
+.link-button {
+    display: inline-block;
+    margin-top: 2rem;
+    background: white;
+    padding: 1rem 2rem;
+    color: $dark-color;
+    text-decoration: none;
+    font-family: 'Tablon', sans-serif;
+
+    &__icon {
+        display: inline-block;
+        width: 1rem;
+        height: 1rem;
+        margin-left: 1rem;
+        background-image: url('../images/outsidelink.png');
+        background-size: contain;
+    }
+}
