--- a/src/scss/indexmedia.scss
+++ b/src/scss/indexmedia.scss
@@ -1,5 +1,6 @@
 .section-media {
     min-height: 600px;
+    padding: 4rem 0;
     background-size: cover;
 
     &:nth-child(even) {
@@ -14,13 +15,17 @@
     position: relative;
     
     &__content {
-        width: 500px;
-        position: absolute;
-        top: 2rem;
-        left: 0;
+        position: relative;
         padding: 1.5rem 3.8rem;
         background: rgba(0, 0, 0, .9);
         color: white;
+
+        @include mq("md") {
+            width: 500px;
+            position: absolute;
+            top: 2rem;
+            left: 0;
+        }
 
         &__head {
             text-transform: uppercase;
@@ -34,6 +39,9 @@
 
     &__link {
         display: block;
-        float: right;
+
+        @include mq("md") {
+            float: right;
+        }
     }
 }
