--- a/src/scss/news.scss
+++ b/src/scss/news.scss
@@ -1,5 +1,6 @@
 .news-page {
-    padding-top: 5rem;
+    padding-top: 7.6rem;
+    height: 100vh;
 
     &.dark {
         background: $dark-color;
