--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -1,17 +1,28 @@
 .nav {
     position: fixed;
     z-index: 10;
-    width: 100%;
-    height: 80px;
-    top: 0;
-    backdrop-filter: blur(30px);
-    background-color: rgba(0, 0, 0, .3);
-    box-shadow: $drop-shadow;
 
-    display: none;
+    &.nav-large {
+        display: none;
+        width: 100%;
+        height: 80px;
+        top: 0;
+        backdrop-filter: blur(30px);
+        background-color: rgba(0, 0, 0, .3);
+        box-shadow: $drop-shadow;
 
-    @include mq("md") {
+        @include mq("md") {
+            display: block;
+        }
+    }
+
+    &.nav-small {
         display: block;
+        width: 100%;
+
+        @include mq("md") {
+            display: none;
+        }
     }
 
     .container {
@@ -103,6 +114,28 @@
                     text-decoration: none;
                 }
             }
+        }
+    }
+}
+
+.nav-small {
+    &__button {
+        position: fixed;
+        z-index: 10;
+        top: 1rem;
+        right: 1rem;
+        padding: 1rem;
+        background: $dark-color;
+        color: white;
+        box-shadow: $drop-shadow;
+        cursor: pointer;
+
+        span {
+            display: block;
+            width: 25px;
+            height: 2px;
+            background: white;
+            margin-bottom: 5px;
         }
     }
 }
