--- a/src/scss/medias.scss
+++ b/src/scss/medias.scss
@@ -1,4 +1,6 @@
 .media-page {
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
 
     &__block {
@@ -22,7 +24,9 @@
     }
 
     main {
+        flex: 1;
         min-height: calc(100vh - 164px);
+        background-position: center top;
 
         .container {
             height: 100%;
