--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -119,6 +119,8 @@
 }
 
 .nav-small {
+    overflow: hidden;
+
     &__button {
         position: fixed;
         z-index: 10;
@@ -136,17 +138,49 @@
             height: 2px;
             background: white;
             margin-bottom: 5px;
+
+            transition: all .3s ease;
+        }
+
+        .open & {
+            span {
+                &:nth-child(1) {
+                    transform: rotate(45deg) translate(5px, 5px);
+                }
+                &:nth-child(2) {
+                    opacity: 0;
+                }
+                &:nth-child(3) {
+                    transform: rotate(-45deg) translate(5px, -5px);
+                }
+            }
         }
     }
 
     &__content {
-        display: none;
+        position: fixed;
+        right: -100%;
+
+        transition: all .3s ease-out;
+
+        li {
+            opacity: 0;
+            transform: translateX(100%);
+            transition: transform .3s ease-out, opacity .3s ease-out;
+
+            @for $i from 1 through 10 {
+                &:nth-child(#{$i}) {
+                    transition-delay: #{($i * 0.05)}s;
+                }
+            }
+        }
     }
 }
 
 .open {
     .nav-small__content {
-        display: block;
+        top: 0;
+        right: 0;
         width: 100vw;
         height: 100vh;
         background: $dark-color;
@@ -158,6 +192,8 @@
             li {
                 text-align: right;
                 margin-bottom: 2rem;
+                opacity: 1;
+                transform: translateX(0);
             }
         }
 
