--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -157,9 +157,18 @@
         }
     }
 
+    .nav__medias__box {
+        display: block;
+        top: 3rem;
+        width: 100%;
+        min-width: 0;
+    }
+
     &__content {
         position: fixed;
         right: -100%;
+        height: 100%;
+        overflow-y: scroll;
 
         transition: all .3s ease-out;
 
@@ -184,10 +193,13 @@
         width: 100vw;
         height: 100vh;
         background: $dark-color;
+        overflow-y: scroll;
+        overflow-x: hidden;
 
-        ul {
+        .nav-small__content__list {
             padding: 2rem;
             padding-top: 6rem;
+            padding-bottom: 3rem;
 
             li {
                 text-align: right;
@@ -195,9 +207,63 @@
                 opacity: 1;
                 transform: translateX(0);
             }
+
+            .nav__medias__box {
+                position: absolute;
+                pointer-events: none;
+                right: -100%;
+                opacity: 0;
+                transition: all .3s ease-out;
+
+                &.open {
+                    position: relative;
+                    pointer-events: all;
+                    right: 0;
+                    opacity: 1;
+
+                    .nav__medias__box__category {
+                        transform: translateX(0);
+                        opacity: 1;
+                    }
+                }
+
+                .nav__medias__box__category {
+                    transform: translateX(100%);
+                    opacity: 0;
+                    transition: all .3s ease-out;
+
+                    @for $i from 1 through 10 {
+                        &:nth-child(#{$i}) {
+                            transition-delay: #{($i * 0.05)}s;
+                        }
+                    }
+                }
+            }
         }
 
-        a, .nav__medias {
+        .nav__medias__box__category {
+            border-top: 1px solid #eee;
+            margin: 0;
+            padding-bottom: .5rem;
+
+            h2 {
+                font-size: 1.3rem;
+            }
+
+            .nav__medias__box__el {
+                a {
+                    padding: 0;
+                    padding-right: 1rem;
+                    font-size: 1.2rem;
+                }
+    
+                &:not(:last-child) {
+                    margin-bottom: 1rem;
+                }
+            }
+        }
+
+        a, .nav__medias span {
             color: white;
             font-family: 'Tablon';
             font-size: 2rem;
