--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -205,13 +205,19 @@
     .nav__medias__box {
         display: block;
         position: absolute;
-        top: 3rem;
         width: 100%;
         min-width: 0;
         height: 0;
         opacity: 0;
         pointer-events: none;
         overflow: hidden;
+        top: 0 !important;
+
+        transform: translateY(0);
+
+        @include mq("md") {
+            top: 3rem;
+        }
     }
 
     &__content {
@@ -319,7 +325,7 @@
             transform: translateX(0);
     
             .nav__medias__box__icon {
-                transform: rotate(0);
+                transform: rotate(0) !important;
             }
     
             .nav__medias__box__category {
@@ -328,5 +334,4 @@
             }
         }
     }
-    
 }
