--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -8,6 +8,7 @@
     @include mq("md") {
         background-position: center center;
         padding-top: 0;
+        padding-bottom: 5rem;
     }
 
     h1 {
@@ -66,7 +67,6 @@
 
         &:hover {
             background: #eee;
-            transform: scale(1.05);
         }
 
         &__header {
