--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -8,9 +8,11 @@
         height: 100%;
         display: flex;
         align-items: center;
+        justify-content: center;
     }
 
     p {
+        display: block;
         margin: 0;
     }
 }
