--- a/src/scss/indexmedia.scss
+++ b/src/scss/indexmedia.scss
@@ -12,7 +12,7 @@
         position: absolute;
         top: -12.5px;
         left: 0;
-        background-image: url('../images/separateur.webp');
+        background-image: url('../images/separateurVector.svg');
         background-size: contain;
         width: 100%;
         height: 25px;
