--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,29 +1,44 @@
 .header {
+    position: relative;
     min-height: 100vh;
     background-image: url('../images/headerbg.png');
     background-size: cover;
     background-position: 65% center;
-    padding-top: 50vh;
+    padding-top: 30vh;
 
     @include mq("md") {
         background-position: center center;
-        padding-top: 0;
+        padding-top: 20vh;
         padding-bottom: 5rem;
     }
 
     h1 {
-        margin: 5rem 0;
-        color: white;
-        text-transform: uppercase;
-        font-family: "boucherie-block", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 5rem;
-        text-align: center;
+        visibility: hidden;
+        // margin: 5rem 0;
+        // color: white;
+        // text-transform: uppercase;
+        // font-family: "boucherie-block", sans-serif;
+        // font-weight: 400;
+        // font-style: normal;
+        // font-size: 5rem;
+        // text-align: center;
 
         @include mq("md") {
             margin: 0;
             visibility: hidden;
+        }
+    }
+
+    &__logo {
+        display: block;
+        max-width: 700px;
+        margin-bottom: 5rem;
+
+        @include mq("md") {
+            position: absolute;
+            top: 7rem;
+            left: 0;
+            margin-bottom: 0;
         }
     }
 
