fixes graphics with gaelle

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -3,8 +3,9 @@
     min-height: 100vh;
     background-image: url('../images/headerbg.png');
     background-size: cover;
-    background-position: 65% center;
-    padding-top: 30vh;
+    background-position: 90% center;
+    padding-top: 5vh;
+    padding-bottom: 3rem;
 
     @include mq("md") {
         background-position: center center;
@@ -14,14 +15,6 @@
 
     h1 {
         visibility: hidden;
-        // margin: 5rem 0;
-        // color: white;
-        // text-transform: uppercase;
-        // font-family: "boucherie-block", sans-serif;
-        // font-weight: 400;
-        // font-style: normal;
-        // font-size: 5rem;
-        // text-align: center;
 
         @include mq("md") {
             margin: 0;
@@ -32,7 +25,8 @@
     &__logo {
         display: block;
         max-width: 700px;
-        margin-bottom: 5rem;
+        width: 100%;
+        margin-bottom: 30vh;
 
         @include mq("md") {
             position: absolute;
@@ -86,6 +80,7 @@
 
         &__header {
             height: 90px;
+            margin-bottom: 1rem;
         }
 
         &__title {
