--- a/src/scss/medias.scss
+++ b/src/scss/medias.scss
@@ -27,6 +27,7 @@
         flex: 1;
         min-height: calc(100vh - 164px);
         background-position: center top;
+        background-size: cover;
 
         .container {
             height: 100%;
