--- a/src/scss/indexmedia.scss
+++ b/src/scss/indexmedia.scss
@@ -3,7 +3,15 @@
     min-height: 600px;
     padding: 4rem 0;
     background-size: cover;
-    background-position: center center;
+    background-position: top center;
+
+    @include mq("md") {
+        min-height: 800px;
+    }
+
+    &.left {
+        background-position: top left !important;
+    }
 
 
     &::before {
@@ -11,15 +19,18 @@
         display: block;
         position: absolute;
         top: -25px;
-        left: 0;
         background-image: url('../images/testseparator.svg');
         background-repeat: repeat no-repeat;
         width: 100%;
         height: 50px;
+        background-position: center;
 
         @include mq("md") {
-            top: -50px;
+            top: -95px;
+            left: -2.5%;
             height: 200px;
+            width: 105%;
+            background-size: 100%;
         }
     }
 
