glitch effect working

--- a/src/scss/indexmedia.scss
+++ b/src/scss/indexmedia.scss
@@ -14,8 +14,7 @@
     }
 
 
-    &::before {
-        content: '';
+    .separator {
         display: block;
         position: absolute;
         top: -25px;
