--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -31,6 +31,12 @@
 body {
     margin: 0;
     font-family: Inter;
+    min-height: 100vh;
+}
+
+html {
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 ul {
@@ -77,4 +83,8 @@ button {
 
 .hidden {
     display: none;
+}
+
+.no-backdrop-blur {
+    backdrop-filter: none !important;
 }
