--- a/src/scss/indexmedia.scss
+++ b/src/scss/indexmedia.scss
@@ -14,22 +14,18 @@
     }
 
 
-    .separator {
+    .separator svg {
         display: block;
         position: absolute;
         top: -25px;
-        background-image: url('../images/testseparator.svg');
-        background-repeat: repeat no-repeat;
         width: 100%;
         height: 50px;
-        background-position: center;
 
         @include mq("md") {
             top: -95px;
             left: -2.5%;
             height: 200px;
             width: 105%;
-            background-size: 100%;
         }
     }
 
@@ -76,3 +72,7 @@
         }
     }
 }
+
+#Calque_1 {
+    image-rendering: crisp-edges;
+  }
