--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -50,14 +50,10 @@
             }
 
             &.home a {
-                display: block;
+                display: flex;
+                align-items: center;
                 width: 100px;
                 height: 80px;
-                color: rgba(255, 255, 255, 0);
-                background-image: url('../images/alereialogo.svg');
-                background-position: center;
-                background-size: contain;
-                background-repeat: no-repeat;
             }
         }
     }
