--- a/src/scss/glitch.scss
+++ b/src/scss/glitch.scss
@@ -7,3 +7,28 @@
     z-index: 9999;
     pointer-events: none;
 }
+
+
+.glitch-wrapper {
+    position: relative;
+    left: 0;
+    display: inline-block;        
+
+    .glitch-target {
+        position: relative;
+        z-index: 1;
+
+        &.hidden {
+            display: block !important;
+            opacity: 0;
+        }
+    }
+      
+    .glitch-layer-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        pointer-events: none;
+        z-index: 2;
+    }  
+}
