--- a/src/scss/glitch.scss
+++ b/src/scss/glitch.scss
@@ -8,27 +8,30 @@
     pointer-events: none;
 }
 
-
 .glitch-wrapper {
     position: relative;
-    left: 0;
-    display: inline-block;        
-
+    display: inline-block;
+    overflow: hidden;
+    z-index: 0;
+  
     .glitch-target {
-        position: relative;
-        z-index: 1;
-
-        &.hidden {
-            display: block !important;
-            opacity: 0;
-        }
+      position: relative;
+      z-index: 1;
+  
+      &.hidden {
+        display: block;
+        opacity: 0;
+      }
     }
-      
+  
     .glitch-layer-container {
-        position: absolute;
-        top: 0;
-        left: 0;
-        pointer-events: none;
-        z-index: 2;
-    }  
-}
+      position: absolute;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      z-index: 2;
+      width: 100%; // 🚨 Match the target’s width
+      height: 100%;
+    }
+  }
+  
