--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -32,6 +32,13 @@
         height: 100%;
 
         .link {
+
+            @include mq("md") {
+                height: 100%;
+                display: flex;
+                align-items: center;
+            }
+
             &:not(:last-child) {
                 margin-right: 1rem;
             }
@@ -47,6 +54,12 @@
                 font-size: 1.25rem;
                 font-weight: 500;
                 font-family: 'Tablon', sans-serif;
+
+                &.disabled {
+                    color: #aaa;
+                    text-decoration: line-through;
+                    pointer-events: none;
+                }
             }
 
             &.home a {
@@ -60,12 +73,6 @@
 
     &__medias {
         position: relative;
-        
-        @include mq("md") {
-            height: 100%;
-            display: flex;
-            align-items: center;
-        }
 
         span {
             color: white;
@@ -102,17 +109,28 @@
             transform: translateY(30px);
             opacity: 0;
             pointer-events: none;
+            height: 300px !important;
 
             transition: all .3s ease-out;
 
-            &__overflow {            
-                overflow: hidden;
+            &__overflow {  
+                width: 100%;
+                height: 100%;          
+                overflow-y: scroll;
+                overflow-x: hidden;
+                &::-webkit-scrollbar {
+                    display: none;
+                }
+
+                & {
+                    -ms-overflow-style: none;  /* IE and Edge */
+                    scrollbar-width: none;  /* Firefox */
+                }
             }
 
             &__category {
                 opacity: 0;
                 transform: translateX(100%);
-                margin-bottom: 1rem;
                 font-family: 'Tablon';
                 pointer-events: none;
 
@@ -126,7 +144,6 @@
 
                 h2 {
                     margin: 0;
-                    margin-bottom: 1rem;
                     padding: 1rem;
                     background: $dark-color;
                     color: white;
@@ -134,7 +151,9 @@
                 }
 
                 li {
-                    margin-top: 1rem;
+                    display: flex;
+                    align-items: center;
+                    height: 50px;
                 }
             
                 a {
@@ -189,17 +208,6 @@
         }
     }
 
-    &__medias__icon {
-        display: inline-block;
-        background-image: url('../images/arrow-down.svg');
-        width: 20px;
-        height: 20px;
-        background-size: contain;
-
-        transform: rotate(0deg);
-        transition: all .3s ease-out;
-    }
-
     .nav__medias__box {
         display: block;
         position: absolute;
@@ -215,6 +223,7 @@
 
         @include mq("md") {
             top: 3rem;
+            height: 100px;
         }
     }
 
@@ -333,5 +342,37 @@
                 }
             }
         }
+    }
+}
+
+.category-toggle {
+    display: inline-block;
+    background-image: url('../images/arrow.png');
+    width: 16px;
+    height: 16px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-left: 0.5rem;
+    transition: transform 0.3s ease;
+    cursor: pointer;
+    transform: rotate(90deg);
+}
+
+.collapsed .category-toggle {
+    transform: rotate(0deg);
+}
+
+.nav__medias__box__category {
+    &.collapsed ul {
+        max-height: 0;
+        opacity: 0;
+        overflow: hidden;
+        transition: all 0.3s ease;
+    }
+
+    ul {
+        max-height: 1000px; // enough for most content
+        opacity: 1;
+        transition: all 0.3s ease;
     }
 }
