camera movement with doors

--- a/src/scss/indexmedia.scss
+++ b/src/scss/indexmedia.scss
@@ -2,7 +2,7 @@
     position: relative;
     min-height: 600px;
     padding: 4rem 0;
-    background-size: contain;
+    background-size: cover;
     background-color: black;
     background-repeat: no-repeat;
     background-position: center center;
