--- a/src/scss/univers.scss
+++ b/src/scss/univers.scss
@@ -1,4 +1,7 @@
 #univers {
     width: 100vh;
     height: 100vh;
+
+    background-image: url('../images/bgtest.jpg');
+    background-size: cover;
 }
