--- a/src/scss/indexmedia.scss
+++ b/src/scss/indexmedia.scss
@@ -1,11 +1,10 @@
 .section-media {
     position: relative;
     min-height: 600px;
-    padding: 4rem 0;
-    background-size: cover;
-    background-color: black;
-    background-repeat: no-repeat;
-    background-position: center center;
+    padding: 0;
+    z-index: 0;
+
+    background: black;
 
     @include mq("md") {
         min-height: 800px;
@@ -15,32 +14,42 @@
         background-position: top left !important;
     }
 
+    .container {
+        height: 800px;
+        background-size: cover;
+    }
 
-    .separator svg {
-        display: block;
+    .separator {
         position: absolute;
         top: -25px;
-        width: 100%;
+        left: 0;
+        width: 100vw;
         height: 50px;
+        z-index: 10000;
 
         @include mq("md") {
-            top: -95px;
-            left: -2.5%;
             height: 200px;
-            width: 105%;
+            top: -100px;
+            width: 100vw;
+        }
+
+        svg {
+            width: 100%;
+            height: 100%;
         }
     }
 
     &:nth-child(even) {
         .media__content {
             left: auto;
-            right: 0;
+            right: 2rem;
         }
     }
 }
 
 .media {
     position: relative;
+    z-index: 1;
     
     &__content {
         position: relative;
@@ -52,7 +61,7 @@
             width: 500px;
             position: absolute;
             top: 2rem;
-            left: 0;
+            left: 2rem;
             padding: 1.5rem 3.8rem;
         }
 
