--- a/src/scss/indexmedia.scss
+++ b/src/scss/indexmedia.scss
@@ -1,10 +1,11 @@
 .section-media {
     position: relative;
-    min-height: 600px;
     padding: 0;
     z-index: 0;
 
     background: black;
+    background-size: contain;
+    background-size: no-repeat;
 
     @include mq("md") {
         min-height: 800px;
