--- a/src/scss/medias.scss
+++ b/src/scss/medias.scss
@@ -20,6 +20,11 @@
 
         .link-button {
             float: right;
+
+            &.disabled {
+                pointer-events: none;
+                background: grey;
+            }
         }
     }
 
