added 2 news, fixed responsive issues, added favicon, and added needed meta for SEO

--- a/src/scss/indexmedia.scss
+++ b/src/scss/indexmedia.scss
@@ -41,10 +41,17 @@
         }
     }
 
+    .media__content {
+        top: 4rem;
+    }
+
     &:nth-child(even) {
         .media__content {
             left: auto;
-            right: 2rem;
+
+            @include mq('md') {
+                right: 2rem;
+            }
         }
     }
 }
