--- a/src/scss/news.scss
+++ b/src/scss/news.scss
@@ -110,9 +110,15 @@
             display: block;
             width: 100%;
             margin-top: 1rem;
-            padding-bottom: 1rem;
+            padding: 1rem;
             color: white;
             text-decoration: none;
+
+            transition: all .3s ease;
+
+            &:hover {
+                background: rgba(230, 230, 230, 1);
+            }
 
             h3, span {
                 margin: 0;
